[gd_scene load_steps=7 format=3 uid="uid://cx2rpesjr050y"]

[ext_resource type="Script" uid="uid://bvajwkct35pyo" path="res://Scripts/rat.gd" id="1_uth6r"]
[ext_resource type="PackedScene" uid="uid://dqnxxopxk0ox0" path="res://Assets/RATSbutwithappliedmodifiers.glb" id="2_jmrqy"]
[ext_resource type="Script" uid="uid://bjb4np2yjqmqv" path="res://Scripts/Components/entity_health_handler.gd" id="3_qaslg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qaslg"]
radius = 10.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3krw6"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_qaslg"]
length = 2.97685

[node name="rat" type="CharacterBody3D" groups=["Entity"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0745, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_uth6r")

[node name="player_detector" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.301025, 0, 0)
shape = SubResource("SphereShape3D_qaslg")

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true

[node name="RATSbutwithappliedmodifiers" parent="." instance=ExtResource("2_jmrqy")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, -0.0302706, -10.6513)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.102221, 0)
shape = SubResource("CapsuleShape3D_3krw6")

[node name="EntityHealthHandler" type="Node3D" parent="."]
script = ExtResource("3_qaslg")
max_health = 50.0
metadata/_custom_type_script = "uid://bjb4np2yjqmqv"

[node name="separation_ray" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0039096, -0.999992, 0, 0.999992, 0.0039096, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_qaslg")

[connection signal="body_shape_entered" from="player_detector" to="." method="_on_player_detector_body_shape_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
